# vending-machine-tracker

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: lint.yaml  test.yaml
vending_machine_backend/: settings.py  urls.py  wsgi.py
vending_machine_management/: apps.py  urls.py  views.py
vending_machine_management/dataclasses/: machine_dataclass.py  product_dataclass.py  stock_dataclass.py
vending_machine_management/dataclasses/product/: product_edit_dataclass.py
vending_machine_management/migrations/: 0001_initial.py  0002_product.py  0003_stock.py  0004_auto_20230114_0751.py  0005_auto_20230114_1500.py  0006_auto_20230114_1520.py  0007_auto_20230114_1528.py  0008_product_price.py  0009_auto_20230115_0242.py  0010_auto_20230115_0654.py  0011_auto_20230115_0713.py  0012_alter_product_price.py
vending_machine_management/models/: __init__.py  base_model.py  machine.py  product.py  stock.py  vending_machine.py
vending_machine_management/serializers/: machine_serializer.py  product_serializer.py
vending_machine_management/serializers/product/: product_add_input_serializer.py  product_edit_input_serializer.py  product_serializer.py
vending_machine_management/serializers/stock/: stock_input_serializer.py  stock_serializer.py
vending_machine_management/services/product/: product_edit_service.py
vending_machine_management/tests/dataclasses/: test_machine_dataclass.py  test_product_dataclass.py  test_stock_dataclass.py
vending_machine_management/tests/model_instances/: machine_model_instance.py  product_model_inatance.py  stock_mode_instance.py
vending_machine_management/tests/views/test_machine_view/: test_add_machine_view.py  test_delete_machine_view.py  test_edit_machine_view.py  (+2 more)
vending_machine_management/urls/: __init__.py  machine_url.py  product_url.py  stock_url.py
vending_machine_management/views/: machine_view.py  product_view.py
vending_machine_management/views/product/: product_add_view.py  product_delete_view.py  product_edit_view.py  product_list_view.py
vending_machine_management/views/stock_view_set/: stock_create_view.py  stock_delete_view.py  stock_detail_view.py  stock_edit_view.py  stock_list_view.py
(+10 files in other folders)
