[tool.poetry]
name = "vending-machine"
version = "0.1.0"
description = ""
authors = ["sudo-lucifer <krittin.niu@student.mahidol.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^2.2.7"
djangorestframework = "^3.10.3"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]
pre-commit = "~=2.17.0"
black = "^22.12.0"

[tool.black]
line-length = 120
target-version = ['py39']
skip-string-normalization = true
extend-exclude = '''\/migrations\/'''

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
